@@ -1,4 +1,5 @@
 4.0
+	+ OpenChange -> Setup menu entry moved to Mail -> OpenChange
 	+ Remove currently unused migration code
 	+ Set version to 4.0
 	+ Use .crt when downloading the certificate for RPC/Proxy
